--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "find . -type d \\( -name bin -o -name obj \\) -exec rm -fr {} \\;",
     "build": "dotnet build",
-    "test": "dotnet test Huntwords.PuzzlesBoard.Cache.Tests/Huntwords.PuzzleBoard.Cache.Tests.csproj",
+    "test": "dotnet test Huntwords.PuzzleBoard.Cache.Tests/Huntwords.PuzzleBoard.Cache.Tests.csproj",
     "start": "export ASPNETCORE_ENVIRONMENT=Development && export DOTNET_CLI_TELEMETRY_OPTOUT=1 && dotnet run -p Huntwords.PuzzleBoard.Cache/Huntwords.PuzzleBoard.Cache.csproj"
   }
 }
